--- a/src/main/resources/fxml/settings.fxml
+++ b/src/main/resources/fxml/settings.fxml
@@ -13,12 +13,12 @@
         <VBox>
             <GridPane hgap="10" vgap="10">
                 <columnConstraints>
-                    <ColumnConstraints hgrow="ALWAYS" percentWidth="50.0"/>
-                    <ColumnConstraints hgrow="ALWAYS" percentWidth="50.0"/>
+                    <ColumnConstraints percentWidth="50.0"/>
+                    <ColumnConstraints percentWidth="50.0"/>
                 </columnConstraints>
                 <rowConstraints>
-                    <RowConstraints vgrow="ALWAYS" prefHeight="50.0"/>
-                    <RowConstraints vgrow="ALWAYS" prefHeight="50.0"/>
+                    <RowConstraints prefHeight="50.0"/>
+                    <RowConstraints prefHeight="50.0"/>
                 </rowConstraints>
                 <Label fx:id="firstNameLabel" text="Prénom"
                        GridPane.columnIndex="0" GridPane.rowIndex="0"/>
