Add Visit Profile + Follow

--- a/src/main/resources/fxml/actualities.fxml
+++ b/src/main/resources/fxml/actualities.fxml
@@ -14,7 +14,7 @@
         </top>
         <center>
                 <VBox>
-                        <TextField fx:id="postText" text="Écrire un message..."/>
+                        <TextField fx:id="postText"/>
                         <Button fx:id="postButton" onAction="#postClick" text="Valider"/>
                         <VBox fx:id="actualitiesPosts"/>
                 </VBox>
