--- a/src/main/resources/fxml/profileVisitor.fxml
+++ b/src/main/resources/fxml/profileVisitor.fxml
@@ -2,9 +2,10 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.polyTweet.controller.ProfileController"
+            fx:controller="com.polyTweet.controller.ProfileVisitorController"
             prefHeight="400.0" prefWidth="600.0"
             fx:id="profileContainer">
         <top>
@@ -16,13 +17,11 @@
                                 <columnConstraints>
                                         <ColumnConstraints percentWidth="25.0"/>
                                         <ColumnConstraints percentWidth="25.0"/>
-                                        <ColumnConstraints percentWidth="25.0"/>
-                                        <ColumnConstraints percentWidth="25.0"/>
+                                        <ColumnConstraints percentWidth="50.0"/>
                                 </columnConstraints>
                                 <Label fx:id="firstName" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
                                 <Label fx:id="lastName" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
-                                <Label id="followed" GridPane.columnIndex="2" GridPane.rowIndex="0" text="Personnes Suivies - "/>
-                                <Label fx:id="followedNb"  GridPane.columnIndex="3" GridPane.rowIndex="0" />
+                                <Button text="Follow" onAction="#followClick" GridPane.columnIndex="2" GridPane.rowIndex="0"/>
                         </GridPane>
                         <Label fx:id="status"/>
                         <VBox fx:id="profilePosts"/>
