--- a/src/main/resources/fxml/actualities.fxml
+++ b/src/main/resources/fxml/actualities.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.HBox?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.polyTweet.controller.ActualitiesController"
@@ -15,7 +16,10 @@
         <center>
                 <VBox>
                         <TextField fx:id="postText"/>
-                        <Button fx:id="postButton" onAction="#postClick" text="Valider"/>
+                        <HBox>
+                                <Button fx:id="postButton" onAction="#postClick" text="Valider"/>
+                                <Button fx:id="refreshButton" onAction="#refresh" text="Actualiser"/>
+                        </HBox>
                         <VBox fx:id="actualitiesPosts"/>
                 </VBox>
         </center>
