--- a/src/main/resources/fxml/login.fxml
+++ b/src/main/resources/fxml/login.fxml
@@ -47,8 +47,17 @@
                 <ColumnConstraints percentWidth="40.0"/>
                 <ColumnConstraints percentWidth="60.0"/>
             </columnConstraints>
-            <Label text="Port" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-            <TextField fx:id="portField" text="5000" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+            <rowConstraints>
+                <RowConstraints percentHeight="33.0"/>
+                <RowConstraints percentHeight="33.0"/>
+                <RowConstraints percentHeight="33.0"/>
+            </rowConstraints>
+            <Label text="Port Local" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+            <TextField fx:id="localPortField" text="5000" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+            <Label text="Adresse IP Réseau" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
+            <TextField fx:id="networkIpField" text="127.0.0.1" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+            <Label text="Port Réseau" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
+            <TextField fx:id="networkPortField" text="5000" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
         </GridPane>
     </GridPane>
     <Button text="Se Connecter" onAction="#connexionClick"/>
