--- a/src/main/resources/fxml/profileVisitor.fxml
+++ b/src/main/resources/fxml/profileVisitor.fxml
@@ -21,7 +21,7 @@
                                 </columnConstraints>
                                 <Label fx:id="firstName" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
                                 <Label fx:id="lastName" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
-                                <Button text="Follow" onAction="#followClick" GridPane.columnIndex="2" GridPane.rowIndex="0"/>
+                                <Button fx:id="followButton" onAction="#followClick" GridPane.columnIndex="2" GridPane.rowIndex="0"/>
                         </GridPane>
                         <Label fx:id="status"/>
                         <VBox fx:id="profilePosts"/>
