--- a/src/main/resources/fxml/header.fxml
+++ b/src/main/resources/fxml/header.fxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
@@ -28,11 +29,11 @@
     </ImageView>
     <Button GridPane.columnIndex="1" GridPane.rowIndex="0"
             text="Profile" fx:id="profileButton" onAction="#profileClick"/>
-    <Button GridPane.columnIndex="2" GridPane.rowIndex="0"
-            text="Actualités" fx:id="actualitiesButton" onAction="#actualitiesClick"/>
-    <Button GridPane.columnIndex="3" GridPane.rowIndex="0"
+    <JFXButton GridPane.columnIndex="2" GridPane.rowIndex="0"
+               text="Actualités" fx:id="actualitiesButton" onAction="#actualitiesClick"/>
+    <JFXButton GridPane.columnIndex="3" GridPane.rowIndex="0"
             text="Paramètres" fx:id="settingsButton" onAction="#settingsClick"/>
-    <TextField fx:id="searchField" onAction="#searchProfile" GridPane.columnIndex="4" GridPane.rowIndex="0"/>
+    <JFXTextField fx:id="searchField" onAction="#searchProfile" GridPane.columnIndex="4" GridPane.rowIndex="0"/>
     <VBox fx:id="listProfile" prefHeight="100.0"
           GridPane.columnIndex="4" GridPane.rowIndex="1"/>
     <ImageView GridPane.columnIndex="5" GridPane.rowIndex="0"
