--- a/src/main/resources/fxml/profile.fxml
+++ b/src/main/resources/fxml/profile.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.polyTweet.controller.ProfileController"
+            fx:controller="com.polyTweet.controller.ProfilePersonalController"
             prefHeight="400.0" prefWidth="600.0"
             fx:id="profileContainer">
     <top>
