--- a/src/main/resources/fxml/login.fxml
+++ b/src/main/resources/fxml/login.fxml
@@ -4,30 +4,31 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.geometry.Insets?>
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.polyTweet.controller.LoginController"
       prefHeight="400.0" prefWidth="600.0">
-    <GridPane>
-        <columnConstraints>
-            <ColumnConstraints percentWidth="50.0"/>
-            <ColumnConstraints percentWidth="50.0"/>
-        </columnConstraints>
+    <FlowPane style="-fx-alignment: center;">
         <ImageView fx:id="polytweet"
                    fitHeight="50.0" fitWidth="50.0"
                    preserveRatio="true"
-                   GridPane.columnIndex="0" GridPane.rowIndex="0">
+        >
             <Image url="@/img/polytweet.png"/>
         </ImageView>
-        <Label text="olyTweet"
-               GridPane.columnIndex="1" GridPane.rowIndex="0"/>
-    </GridPane>
-    <GridPane>
+        <Label text="olyTweet"/>
+    </FlowPane>
+    <GridPane style="-fx-alignment: center">
         <rowConstraints>
             <RowConstraints percentHeight="50.0"/>
             <RowConstraints percentHeight="50.0"/>
         </rowConstraints>
         <GridPane GridPane.columnIndex="0" GridPane.rowIndex="0">
+            <GridPane.margin>
+                <Insets top="50.0"/>
+            </GridPane.margin>
             <columnConstraints>
                 <ColumnConstraints percentWidth="40.0"/>
                 <ColumnConstraints percentWidth="30.0"/>
@@ -35,11 +36,13 @@
             </columnConstraints>
             <Label text="Profile"
                    GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-            <Label fx:id="filePath" text="Aucun Profile Sélectionné" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
-            <Button text="Importer"
-                    fx:id="importButton"
-                    onAction="#importClick"
-                    GridPane.columnIndex="2" GridPane.rowIndex="0"/>
+            <Label fx:id="filePath" text="Aucun Profile Sélectionné" GridPane.columnIndex="1" GridPane.rowIndex="0">
+            </Label>
+            <JFXButton text="Importer"
+                       style="-jfx-button-type: RAISED;-fx-background-color: white;-fx-text-fill: black;"
+                       fx:id="importButton"
+                       onAction="#importClick"
+                       GridPane.columnIndex="2" GridPane.rowIndex="0"/>
         </GridPane>
         <GridPane GridPane.columnIndex="0" GridPane.rowIndex="1">
             <columnConstraints>
@@ -53,20 +56,30 @@
                 <RowConstraints percentHeight="25.0"/>
             </rowConstraints>
             <Label text="Adresse IP Locale" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-            <TextField fx:id="localIpField" text="127.0.0.1" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+            <JFXTextField style="-fx-label-float:true;-fx-background-color:transparent" fx:id="localIpField"
+                          text="127.0.0.1" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
             <Label text="Adresse IP Réseau" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
-            <TextField fx:id="networkIpField" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+            <JFXTextField style="-fx-label-float:true;-fx-background-color:transparent" fx:id="networkIpField"
+                          GridPane.columnIndex="1" GridPane.rowIndex="2"/>
         </GridPane>
     </GridPane>
-    <Button fx:id="loginButton" text="Se Connecter" disable="true" onAction="#connexionClick"/>
-    <GridPane>
-        <columnConstraints>
-            <ColumnConstraints percentWidth="50.0"/>
-            <ColumnConstraints percentWidth="50.0"/>
-        </columnConstraints>
-        <Label text="Pas de Profile ?"
-               GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-        <Button fx:id="registerButton" text="S'inscrire" onAction="#registerClick"
-                GridPane.columnIndex="1" GridPane.rowIndex="0"/>
-    </GridPane>
+    <FlowPane style="-fx-alignment: center;">
+        <VBox.margin>
+            <Insets>
+                <bottom>10</bottom>
+            </Insets>
+        </VBox.margin>
+        <JFXButton fx:id="loginButton" text="Se Connecter" disable="true"
+                   style="-jfx-button-type: RAISED;-fx-background-color: green;-fx-text-fill: white;"
+                   onAction="#connexionClick"/>
+    </FlowPane>
+    <FlowPane style="-fx-alignment: center;">
+        <Label text="Pas de Profile ?">
+            <FlowPane.margin>
+                <Insets right="50.0"/>
+            </FlowPane.margin>
+        </Label>
+        <JFXButton fx:id="registerButton" text="S'inscrire" onAction="#registerClick"
+                   style="-jfx-button-type: RAISED;-fx-background-color: green;-fx-text-fill: white;"/>
+    </FlowPane>
 </VBox>
